[package]
name = "sd-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sd-core = { path = "../sd-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum = "0.8"
dirs = "6"
keyring = { version = "3", features = ["sync-secret-service"] }
rand = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
image = { version = "0.25", features = ["jpeg"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tokio-tungstenite = "0.26"

[build-dependencies]
tauri-build = { version = "2", features = [] }
